# trade-or-die

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fix_plan.md  log.sh  start.sh  stop.sh
src/: analyst.rs  database.rs  governor.rs  main.rs  notifier.rs  recharger.rs  scanner.rs  strategy.rs  trader.rs  ui.rs
