[package]
name = "polymarket"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
base64 = "0.22.1"
chrono = "0.4.43"
crossterm = "0.29.0"
dotenv = "0.15.0"
ethers = { version = "2.0.14", features = ["rustls"] }
hex = "0.4.3"
hmac = "0.12.1"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
url = "2.5.0"
duckdb = { version = "1.1.1", features = ["bundled"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
